--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="controls">
-    <select id="citySelect"></select>
+    <select id="citySeleect"></select>
   </div>
   <div id="map"></div>
 
